# eco-wardrobe-bootcamp

./: .env  .gitignore  README.md  database.py  pyproject.toml  testar_banco.py
.github/workflows/: ci.yml
src/: logic.py  main.py
tests/: test_logic.py
